# timex

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
configuration/fit/: index.html
configuration/sys/: index.html
docs/: examples.md  index.md  installation.md  usage.md
docs/configuration/: fit.md  sys.md
examples/: index.html
examples/hip67522b/: HIP67522b_250618_muscat4_Na_D_c2346_r18.csv  HIP67522b_250618_muscat4_g_narrow_c234568_r20.csv  HIP67522b_250618_muscat4_i_narrow_c234568_r20.csv  HIP67522b_250618_muscat4_z_narrow_c23456_r20.csv  fit.yaml
examples/hip67522c/: HIP67522_240422_muscat4_g_c234_r26.csv  HIP67522_240422_muscat4_i_c234_r24.csv  HIP67522_240422_muscat4_r_c234_r26.csv  HIP67522_240422_muscat4_z_c234_r22.csv  fit.yaml  sys.yaml
examples/v1298tau-flare1/: arctic_apo_flare_v1298tau+aux.txt  fit.yaml  sys.yaml
examples/v1298tau-flare2/: V1298Tau-e_20230924_KeplerCam_zp.txt  fit.yaml
examples/v1298tau-spot/: V1298Tauc_241215_muscat3_g_c245678_r18_mapping.csv  V1298Tauc_241215_muscat3_i_c245678_r24_mapping.csv  V1298Tauc_241215_muscat3_r_c245678_r20_mapping.csv  V1298Tauc_241215_muscat3_z_c245678_r28_mapping.csv  fit.yaml  sys.yaml
gp_performance/: index.html
installation/: index.html
search/: search_index.json
stylesheets/: extra.css
timex/: __init__.py  fit.py  io.py  model.py  optim.py  plot.py  util.py
usage/: index.html
