[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "timex"
version = "0.2.0"
description = "Transit fitting analysis package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "John Livingston", email = "john.livingston@nao.ac.jp"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "pyyaml",
    "jax",
    "jaxlib",
    "numpyro",
    "jaxoplanet",
    "celerite2",
    "astropy",
    "patsy",
    "corner",
    "numpy",
    "pandas",
    "matplotlib",
    "arviz",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[project.scripts]
timex = "timex.fit:cli"

[project.urls]
Homepage = "https://github.com/john-livingston/timex"
Repository = "https://github.com/john-livingston/timex.git"
Issues = "https://github.com/john-livingston/timex/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["timex*"]

[tool.setuptools.package-data]
timex = ["*.yaml", "*.yml"]
